welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: not found: value Maths
    if( nums(i+1)==5+nums(i) && ( nums(i+2)==nums(i)-1 || Maths.Abs(nums(i+2) - nums(i)+1) <= 2 ) )
                                                          ^